tests/dataset/tpc-ds/compiler/c/q93.error
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c: In function ‘test_TPCDS_Q93_active_sales’:
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:310:20: error: incompatible types when initializing type ‘int’ using type ‘tmp_item_t’
  310 |                    (tmp_item_t){.ss_customer_sk = 2, .sumsales = 60.0}};
      |                    ^
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:313:53: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  313 |   if (test_TPCDS_Q93_active_sales_result.len != tmp1.len) {
      |                                                     ^
      |                                                     ->
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:317:62: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  317 |       if (test_TPCDS_Q93_active_sales_result.data[i3] != tmp1.data[i3]) {
      |                                                              ^
      |                                                              ->
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:350:7: warning: implicit declaration of function ‘t_item_list_t_create’ [-Wimplicit-function-declaration]
  350 |       t_item_list_t_create(store_sales.len * store_returns.len * reason.len);
      |       ^~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:350:39: error: ‘(store_sale_t *)&store_sales’ is a pointer; did you mean to use ‘->’?
  350 |       t_item_list_t_create(store_sales.len * store_returns.len * reason.len);
      |                                       ^
      |                                       ->
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:350:59: error: ‘(store_return_t *)&store_returns’ is a pointer; did you mean to use ‘->’?
  350 |       t_item_list_t_create(store_sales.len * store_returns.len * reason.len);
      |                                                           ^
      |                                                           ->
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:350:72: error: ‘(reason_t *)&reason’ is a pointer; did you mean to use ‘->’?
  350 |       t_item_list_t_create(store_sales.len * store_returns.len * reason.len);
      |                                                                        ^
      |                                                                        ->
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:365:18: error: invalid operands to binary != (have ‘store_return_t’ and ‘int’)
  365 |         if (!(sr != 0 && sr.sr_reason_sk == r.r_reason_sk)) {
      |                  ^~
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:369:17: error: invalid operands to binary == (have ‘reason_t’ and ‘int’)
  369 |         if (!(r == 0 || r.r_reason_desc == "ReasonA")) {
      |                 ^~
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:374:31: error: invalid operands to binary != (have ‘store_return_t’ and ‘int’)
  374 |             .act_sales = ((sr != 0) ? (ss.ss_quantity - sr.sr_return_quantity) *
      |                               ^~
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:381:17: error: invalid operands to binary == (have ‘reason_t’ and ‘int’)
  381 |         if (!(r == 0 || r.r_reason_desc == "ReasonA")) {
      |                 ^~
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:386:31: error: invalid operands to binary != (have ‘store_return_t’ and ‘int’)
  386 |             .act_sales = ((sr != 0) ? (ss.ss_quantity - sr.sr_return_quantity) *
      |                               ^~
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:397:18: error: invalid operands to binary != (have ‘store_return_t’ and ‘int’)
  397 |         if (!(sr != 0 && sr.sr_reason_sk == r.r_reason_sk)) {
      |                  ^~
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:401:17: error: invalid operands to binary == (have ‘reason_t’ and ‘int’)
  401 |         if (!(r == 0 || r.r_reason_desc == "ReasonA")) {
      |                 ^~
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:406:31: error: invalid operands to binary != (have ‘store_return_t’ and ‘int’)
  406 |             .act_sales = ((sr != 0) ? (ss.ss_quantity - sr.sr_return_quantity) *
      |                               ^~
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:413:17: error: invalid operands to binary == (have ‘reason_t’ and ‘int’)
  413 |         if (!(r == 0 || r.r_reason_desc == "ReasonA")) {
      |                 ^~
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:418:31: error: invalid operands to binary != (have ‘store_return_t’ and ‘int’)
  418 |             .act_sales = ((sr != 0) ? (ss.ss_quantity - sr.sr_return_quantity) *
      |                               ^~
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:440:30: warning: implicit declaration of function ‘result_item_list_t_create’ [-Wimplicit-function-declaration]
  440 |   result_item_list_t tmp18 = result_item_list_t_create(tmp17.len);
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:440:30: error: invalid initializer
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:445:27: error: invalid initializer
  445 |     t_item_list_t tmp21 = t_item_list_t_create(_gp.items.len);
      |                           ^~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:475:20: error: incompatible types when assigning to type ‘int’ from type ‘list_float’
  475 |     tmp20[tmp19] = result;
      |                    ^~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq933607035013/001/prog.c:508:40: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  508 |   test_TPCDS_Q93_active_sales_result = result;
      |                                        ^~~~~~
